(ins/rm)CSCvs03379 fixed work wrap

--- a/src/app/pages/solution/fingerprint-details/fingerprint-body/fp-compare/comparisonview/comparisonview.component.scss
+++ b/src/app/pages/solution/fingerprint-details/fingerprint-body/fp-compare/comparisonview/comparisonview.component.scss
@@ -1,9 +1,12 @@
+:host {
 .compare-em-dash::after {
 	content: " \2014";
 }
 
 .compare-text-warp {
-	word-wrap: break-word;
-	overflow: scroll;
+	word-break: break-all;
+    white-space: normal !important;
 	height: 200px;
+	overflow: scroll;
+}
 }
